Fix footer overlapping content

--- a/angular-frontend/src/app/app.component.scss
+++ b/angular-frontend/src/app/app.component.scss
@@ -15,7 +15,6 @@ nav {
 
 
 footer {
-    position: absolute;
     bottom: 0;
     width: 100%;
     display: flex;
